# internapp

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  Makefile  README.md  SPEC.md  base-prompt.md  docker-compose.dev.yml  docker-compose.yml  future_tasks_feature_design.md  openclaw-prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml  update-env.yml
app/: config.py  dependencies.py  main.py
app/db/: sqlite.py
app/jobs/: reminders.py
app/models/: applicant.py  intern.py  task.py  track.py
app/routers/: admin.py  applicants.py  auth.py  claim.py  health.py  intern.py  linear_api.py  onboarding.py  program.py  sponsor.py  tasks.py
app/services/: cache.py  discord.py  email.py  linear.py  sessions.py  sheets.py  tokens.py
app/templates/: admin.html  admin_applicant_interview.html  admin_applicants.html  admin_attendance.html  admin_email.html  admin_intern.html  admin_linear.html  admin_reviews.html  base.html  checkin.html  claim.html  deliverables.html  discord_linked.html  home.html  me.html  onboarding.html  program.html  reviews.html  signin.html  sponsor.html  sponsor_intern.html  survey.html
content/emails/: confirm-spot.html  decline.html  demo-meeting.html  discord-link.html  kickoff.html  missing-checkin.html  waitlist-closed.html  waitlist.html  (+2 more)
nginx/: internapp.conf
scripts/: migrate_roster_roles.py  provision.sh  seed_sheets.py
tests/: conftest.py  test_auth.py  test_health.py  test_models.py  test_sheets_mock.py  test_sqlite.py  test_tasks.py  test_tokens.py
